--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello momo</title>
   </head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1YJ857TLQC"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-1YJ857TLQC');
+  </script>
   <body>
     <div id="root"></div>
   </body>
