--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hello momo</title>
   </head>
+  <script
+    src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.2/kakao.min.js"
+    integrity="sha384-TiCUE00h649CAMonG018J2ujOgDKW/kVWlChEuu4jK2vxfAAD0eZxzCKakxg55G4"
+    crossorigin="anonymous"
+  ></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-1YJ857TLQC"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
